--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hallo World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to DID Lunatic</title>
+  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="assets/plugins/bootstrap/js/bootstrap.js"></script>
+  <script src="assets/plugins/jquery/jquery.min.js"></script>
+</head>
+<body>
+  
+  <div id="animated-bg">
+    <div class="textCentered">Welcome to DID Lunatic</div>
+  </div>
+  
+  <script src="assets/js/style.js"></script>
+</body>
+</html>
