--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to DID Lunatic</title>
+  <link rel="shortcut icon" href="/assets/img/ssss.jpg" type="image/x-icon">
   <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script src="assets/plugins/bootstrap/js/bootstrap.js"></script>
-  <script src="assets/plugins/jquery/jquery.min.js"></script>
 </head>
 <body>
   
@@ -17,5 +16,7 @@
   </div>
   
   <script src="assets/js/style.js"></script>
+  <script src="assets/plugins/bootstrap/js/bootstrap.js"></script>
+  <script src="assets/plugins/jquery/jquery.min.js"></script>
 </body>
 </html>
